<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:progressTint="@color/colorAccent"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_semi_padding"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="1dp"
        card_view:cardMaxElevation="2dp"
        android:transitionName="@string/message_open_transistion"
        >
        <LinearLayout
            android:id="@+id/ll_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <net.appitiza.android.lifedrop.Views.CustomTextview
                android:id="@+id/tv_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/default_semi_padding"
                android:fontFamily="@font/monotype"
                android:gravity="center_vertical"
                android:padding="@dimen/default_semi_padding"
                android:textAllCaps="true"
                android:textSize="@dimen/default_large_text_size"
                android:transitionName="@string/blood_group_transistion"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_semi_padding">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_semi_padding">


                    <net.appitiza.android.lifedrop.Views.CustomTextview
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_semi_padding"
                        android:textStyle="bold"
                        android:transitionName="@string/name_transistion"
                        android:text="@string/app_name" />

                    <net.appitiza.android.lifedrop.Views.CustomTextview
                        android:id="@+id/tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/call"
                        android:drawablePadding="@dimen/default_semi_padding"
                        android:drawableStart="@drawable/call"
                        android:transitionName="@string/number_transistion"
                        android:padding="@dimen/default_semi_padding"
                        android:text="@string/app_name" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="left|center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/default_semi_padding">

                    <net.appitiza.android.lifedrop.Views.CustomTextview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:gravity="right|center_vertical"
                        android:padding="@dimen/default_semi_padding"
                        android:text="@string/requires_by"
                        android:textStyle="bold" />

                    <net.appitiza.android.lifedrop.Views.CustomTextview
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:gravity="right|center_vertical"
                        android:transitionName="@string/date_transistion"
                        android:textStyle="italic" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>