<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/default_padding"
    tools:context=".ui.activities.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_semi_padding">

        <Spinner
            android:id="@+id/spnr_blood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@drawable/et_bg"
            android:hint="@string/last_donated"
            android:padding="@dimen/default_semi_padding"
            android:textColorHint="@color/et_hint_color" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:hint="@string/message"
                android:padding="@dimen/default_semi_padding"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="4"
                android:textColorHint="@color/et_hint_color" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <EditText
                android:id="@+id/et_required_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:focusable="false"
                android:hint="@string/required_date"
                android:imeOptions="actionSend"
                android:inputType="none"
                android:maxLines="1"
                android:padding="@dimen/default_semi_padding"
                android:textColorHint="@color/et_hint_color" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/et_bg"
                android:focusable="false"
                android:hint="@string/address"
                android:imeOptions="actionSend"
                android:inputType="none"
                android:padding="@dimen/default_semi_padding"
                android:textColorHint="@color/et_hint_color" />

        </android.support.design.widget.TextInputLayout>

        <net.appitiza.android.lifedrop.Views.CustomTextview
            android:id="@+id/tv_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:fontFamily="@font/helvatica"/>


    </LinearLayout>
</ScrollView>
