<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activities.SplashActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/default_semi_padding">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding">

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_padding"
                    android:background="@drawable/et_bg"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="@dimen/default_semi_padding"
                    android:textColorHint="@color/et_hint_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding">

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="@dimen/default_semi_padding"
                    android:textColorHint="@color/et_hint_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:visibility="visible">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="@dimen/default_semi_padding"
                    android:textColorHint="@color/et_hint_color"/>
            </android.support.design.widget.TextInputLayout>



            <net.appitiza.android.lifedrop.Views.CustomTextview
                android:id="@+id/tv_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_padding"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/helvatica"/>


        </LinearLayout>

    </ScrollView>
</LinearLayout>
